--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="action_share">Share</string>
     <string name="back_button">go back</string>
     <string name="share_text">A must read book: </string>
-
+    <string name="scan_dialog_title">Scan IBSN Barcode</string>
+    <string name="scan_isbn">Scan ISBN code</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
     The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
