--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="alert_title">Error</string>
     <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
     The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
+    <string name="okay">Okay</string>
+    <string name="barcode_icon">Barcode Icon</string>
 </resources>
