--- a/Football_Scores/app/src/main/res/values/strings.xml
+++ b/Football_Scores/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="semi_final">Semi Final</string>
     <string name="final_text">Final</string>
     <string name="share_text">Share</string>
-    <string name="share_button_desc">Share Match Information</string>
+    <string name="share_desc">Share Match Details of %1$s vs %2$s</string>
     <string name="about">About</string>
     <string name="title_activity_about">AboutActivity</string>
     <string name="about_text">
